--- a/node.html
+++ b/node.html
@@ -7,16 +7,19 @@
         <meta name="viewport" content="width=400px">
 
         <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.27/moment-timezone-with-data-10-year-range.min.js" type="text/javascript"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.4/chartist.min.css" rel="stylesheet" type="text/css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.4/chartist.min.js" type="text/javascript"></script>
         <link href="resources/styles/globals.css" rel="stylesheet" type="text/css">
         <script src="resources/scripts/config.js.php" type="text/javascript"></script>
         <script src="resources/scripts/helpers.js" type="text/javascript"></script>
 
         <link href="resources/styles/grouping.css" rel="stylesheet" type="text/css">
-        <link href="resources/styles/pages/session.css" rel="stylesheet" type="text/css">
-        <script src="resources/scripts/pages/session.js" type="text/javascript"></script>
+        <link href="resources/styles/pages/node.css" rel="stylesheet" type="text/css">
+        <script src="resources/scripts/pages/node.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -27,39 +30,59 @@
         </header>
 
         <main id="main" class="main">
-            <div id="session-info-group" style="display: none">
+            <div id="node-info-group" style="display: none">
                 <div class="info-group">
                     <div class="info-group-left">
-                        <span id="session-name"></span>
+                        <span id="node-location"></span>
                         <br>
                         <span id="session-description"></span>
                     </div>
                 
                     <div class="info-group-right">
                         <button>Download All Data</button>
-                        <button>Stop Session Now</button>
-                        <button class="last-item">Delete Session</button>
+                        <button>Stop Node Reporting Now</button>
+                        <button class="last-item">Delete Node from Session</button>
                     </div>
                 </div>
             </div>
 
-            <div id="active-nodes-group" style="display: none">
+            <div class="time-machine">
+                <button>
+                    <i class="material-icons">chevron_left</i>
+                </button>
+
+                <div><span>Data for 14/02/2020 at 11:20</span></div>
+
+                <button>
+                    <i class="material-icons">chevron_right</i>
+                </button>
+            </div>
+
+            <div id="reports-group">
                 <div class="titled-group-header">
-                    <h2>Active Sensor Nodes</h2>
-                    <button>Add New</button>
+                    <h2>Latest Report</h2>
                     <div class="titled-group-separator"></div>
                 </div>
 
-                <div id="active-nodes" class="items-block"></div>
+                <div class="reports"></div>
+            </div>
+
+            <div id="temperature_graph_group" style="display: none">
+                <div class="titled-group-header">
+                    <h2>Temperature (24 Hours)</h2>
+                    <div class="titled-group-separator"></div>
+                </div>
+
+                <div id="temperature_graph" class="item item-graph"></div>
             </div>
         
-            <div id="completed-nodes-group" style="display: none">
+            <div id="humidity_graph_group" class="last-item" style="display: none">
                 <div class="titled-group-header">
-                    <h2>Completed Sensor Nodes</h2>
+                    <h2>Humidity (24 Hours)</h2>
                     <div class="titled-group-separator"></div>
                 </div>
 
-                <div id="completed-nodes" class="items-block">
+                <div id="humidity_graph" class="item item-graph">
             </div>
         </main>
     </body>
