Various changes and improvements throughout the codebase

--- a/node.html
+++ b/node.html
@@ -33,9 +33,12 @@
             <div id="node-info-group" style="display: none">
                 <div class="info-group">
                     <div class="info-group-left">
-                        <span id="node-location"></span>
+                        <span>
+                            <span>Node View</span><span> | </span>
+                            <span id="node-location"></span>
+                        </span>
                         <br>
-                        <span id="session-description"></span>
+                        <span>Part of the 'Session name here' session.</span>
                     </div>
                 
                     <div class="info-group-right">
