--- a/session.html
+++ b/session.html
@@ -41,7 +41,7 @@
                     <div class="info-group-right">
                         <button>Download All Data</button>
                         <button id="button-stop">Stop Session Now</button>
-                        <button class="last-item" id="button-delete">Delete Session</button>
+                        <button class="last-item" id="button-delete" onclick="deleteSessionClick()">Delete Session</button>
                     </div>
                 </div>
             </div>
