Mostly completed individual node page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div id="active-sessions-group" style="display: none">
                 <div class="titled-group-header">
                     <h2>Active Sessions</h2>
-                    <button onclick="newSessionModalOpen()">Add New</button>
+                    <button onclick="newSessionModalOpen()">Start New</button>
                     <div class="titled-group-separator"></div>
                 </div>
 
@@ -53,7 +53,7 @@
         <div id="modal_shade" class="modal_shade" style="display: none"></div>
         <div id="new_session_modal" class="modal" style="display: none">
             <div class="modal_header">
-                <span>Create a New Session</span>
+                <span>Start a New Session</span>
                 <button onclick="newSessionModalClose()">
                     <i class="material-icons">close</i>
                 </button>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="modal_footer">
-                <button onclick="newSessionModalSave()">Save</button>
+                <button onclick="newSessionModalSave()">Save & Start</button>
                 <button onclick="newSessionModalCancel()">Cancel</button>
             </div>
         </div>
