--- a/session.html
+++ b/session.html
@@ -40,7 +40,7 @@
                 
                     <div class="info-group-right">
                         <button>Download All Data</button>
-                        <button id="button-stop">Stop Session Now</button>
+                        <button id="button-stop" onclick="stopSessionNow()">Stop Session Now</button>
                         <button class="last-item" id="button-delete" onclick="deleteSessionClick()">Delete Session</button>
                     </div>
                 </div>
