--- a/node.html
+++ b/node.html
@@ -25,7 +25,7 @@
     <body>
         <header>
             <div class="main">
-                <h1>Phenotyping Sensor Network</h1>
+                <h1><a href=".">Phenotyping Sensor Network</a></h1>
             </div>
         </header>
 
